Move java9 profile for release=8 to parent